--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
     "name": "image-server",
     "version": "1.0.0",
+    "private": true,
     "description": "image upload server",
     "dependencies": {
         "body-parser": "^1.17.2",
         "express": "^4.15.3",
         "log4js": "^1.1.1",
-        "multer": "^1.3.0"
+        "multer": "^1.3.0",
+        "chai": "^4.1.0",
+        "chai-http": "^3.0.0",
+        "chai-as-promised": "^7.1.1",
+        "should": "^10.0.0"
     },
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha 'src/test/**/*.js'",
+        "start": "nodemon 'src/app.js'"
     },
     "repository": {
         "type": "git",
-        "url": "git+ssh://git@github.com/ryman1981/image-server.git"
+        "url": "git+https://git@github.com/ryman1981/image-server.git"
     },
     "keywords": [
         "image",
