--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "main": "app.js",
     "scripts": {
         "test": "mocha 'src/test/**/*.js'",
-        "start": "nodemon 'src/app.js'"
+        "start": "node 'src/app.js'"
     },
     "repository": {
         "type": "git",
